[tool.poetry]
name = "to-cryptact-converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "to_cryptact_converter"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
pandas = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
