[tool.poetry]
name = "to-cryptact-converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "to_cryptact_converter"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
pandas = "^1.4.4"
pre-commit = "^2.20.0"
black = "^22.8.0"
isort = "^5.10.1"
pyright = "^1.1.270"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
experimental-string-processing = true

[tool.isort]
profile = "black"